--- a/todo
+++ b/todo
@@ -1,4 +1,3 @@
-// todo
-- Support stattrak
+- Support stattrak AAAAAAAAAAAAND overide stattrak prices AAAAND generate spy link with stattrak
 - Create a spike detection based on the csgostash extra info while scraping the database
 - Only generate floats that can be found on the market (ex --sensitive)
