--- a/todo
+++ b/todo
@@ -1,1 +1,2 @@
-- Create a spike detection based on the csgostash extra info while scraping the database
+- Add avrg price to database if a skins has "No Recent Price" to every condition.
+- Add avrg price to database if a skin has unrealistic spikes between prices of conditions.
